@@ -18,7 +18,7 @@
 
 @rem Set environment variables here.
 
-@rem The java implementation to use.  Java 1.8+ required.
+@rem The java implementation to use.  Java 1.7+ required.
 @rem set JAVA_HOME=c:\apps\java
 
 @rem Extra Java CLASSPATH elements.  Optional.
@@ -37,10 +37,14 @@
 @rem Extra Java runtime options.
 @rem Below are what we set by default.  May only work with SUN JVM.
 @rem For more on why as well as other possible settings,
-@rem see http://hbase.apache.org/book.html#performance
+@rem see http://wiki.apache.org/hadoop/PerformanceTuning
 @rem JDK6 on Windows has a known bug for IPv6, use preferIPv4Stack unless JDK7.
 @rem @rem See TestIPv6NIOServerSocketChannel.
 set HBASE_OPTS="-XX:+UseConcMarkSweepGC" "-Djava.net.preferIPv4Stack=true"
+
+@rem Configure PermSize. Only needed in JDK7. You can safely remove it for JDK8+
+set HBASE_MASTER_OPTS=%HBASE_MASTER_OPTS% "-XX:PermSize=128m" "-XX:MaxPermSize=128m"
+set HBASE_REGIONSERVER_OPTS=%HBASE_REGIONSERVER_OPTS% "-XX:PermSize=128m" "-XX:MaxPermSize=128m"
 
 @rem Uncomment below to enable java garbage collection logging for the server-side processes
 @rem this enables basic gc logging for the server processes to the .out file
@@ -79,5 +83,5 @@ set HBASE_OPTS="-XX:+UseConcMarkSweepGC" "-Djava.net.preferIPv4Stack=true"
 @rem otherwise arrive faster than the master can service them.
 @rem set HBASE_SLAVE_SLEEP=0.1
 
-@rem Tell HBase whether it should manage it's own instance of ZooKeeper or not.
+@rem Tell HBase whether it should manage it's own instance of Zookeeper or not.
 @rem set HBASE_MANAGES_ZK=true
